--- a/index.html
+++ b/index.html
@@ -6,15 +6,266 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bootstrap-practice</title>
+    <!-- css custom style sheet -->
+    <link rel="stylesheet" href="style.css">
+
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 
 <body>
+    <header>
+        <nav class=" navbar navbar-expand-lg navbar-light bg-light py-5">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#bag">Backpack</a>
+                        </li>
 
 
+                        <li class="nav-item">
+                            <a class="nav-link " href="#subscribe">Subscribe</a>
+                        </li>
+                    </ul>
 
+                </div>
+            </div>
+        </nav>
+
+
+        <!-- image slider -->
+        <section class="container mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row bg-info p-5  bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude headphone</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatibus nemo
+                                    ducimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iste
+                                    voluptates, ab amet minus praesentium ad repellat possimus perspiciatis </p>
+                                <h1>500$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row bg-info p-5  bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude headphone</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatibus nemo
+                                    ducimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iste
+                                    voluptates, ab amet minus praesentium ad repellat possimus perspiciatis </p>
+                                <h1>500$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row bg-info p-5  bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude headphone</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatibus nemo
+                                    ducimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iste
+                                    voluptates, ab amet minus praesentium ad repellat possimus perspiciatis </p>
+                                <h1>500$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+    </header>
+    <main>
+        <!-- categories section -->
+        <section class="container my-5">
+
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border-2 bg-warning d-flex align-items-center justify-content-around rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border-2 bg-info d-flex align-items-center justify-content-around rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border-2 bg-primary d-flex align-items-center justify-content-around rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+            <!-- shoes section -->
+        </section>
+
+        <!-- shoes section -->
+        <section class="container my-5" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Apex</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bata</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- bags section -->
+
+        <section class="container my-5" id="bag">
+            <h2>Bags</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Apex</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bata</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-4">
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="subscribe" style="height: 400px;"
+            class="container my-5 bg-info d-flex justify-content-center align-items-center rounded-3">
+            <div class="">
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>get more update and offers daily basis</p>
+                <input type="text" placeholder="Your Email">
+                <button class="btn btn-primary">Submit</button>
+            </div>
+
+        </section>
+    </main>
+
+    <footer class="mt-5 text-center">
+        <p><small>copyright panda commerce authority 2022</small></p>
+    </footer>
 
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
